<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonPickStep_Config_v_1_x_x" Id="{0a520f1f-6072-0fe5-120d-c312befa1216}">
    <Declaration><![CDATA[TYPE TcoTixonPickStep_Config_v_1_x_x EXTENDS TcoTixonGenericPickConfig :
STRUCT
    {attribute addProperty Name "<#Time when stepper in work #> - T_STEP_WORK"}
    SteperInWorkTime : TIME := T#1S;
    {attribute addProperty Name "<#Time when stepper in home #> - T_STEP_HOME"}
    SteperInHomeTime : TIME := T#1S;
    {attribute addProperty Name "<#Error time separator #> - T_SEP_ERROR"}
    ErrorTimeSeparator : TIME := T#0S;
    {attribute addProperty Name "<#Error time buffer #> - T_BUFF_ERROR"}
    ErrorTimeBuffer : TIME := T#0S;
    {attribute addProperty Name "<#Error time Stepper #> - T_STEP_ERROR"}
    ErrorTimeStepper : TIME := T#0S;
    {attribute addProperty Name "<#Error time Hopper #> - T_HOP_ERROR"}
    ErrorTimeHopper : TIME := T#0S;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>